--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -334,7 +334,7 @@
 /* Message text shown in a message that have photo media but no text */
 "chat.message.photo" = "صورة";
 
-/* Text shown when chat input box is empty */
+/* Text shown when content input text field is empty for chat screens. */
 "chat.message.placeholder" = "اكتب رسالة";
 
 /* Text shown in place of a received message we are not able to process yet. */
@@ -1522,9 +1522,6 @@
 /* One of the items in context menu presented upon long press on linkified phone number in text. Parameter is the phone number. */
 "textlabel.context.menu.call.number" = "الاتصال برقم %@";
 
-/* One of the items in context menu presented upon long press on web link. */
-"textlabel.context.menu.copy.link" = "نسخ الرابط";
-
 /* One of the items in context menu presented upon long press on linkified phone number in text. */
 "textlabel.context.menu.copy.phone.number" = "نسخ رقم الهاتف";
 
@@ -1683,12 +1680,6 @@
 
 /* Displayed when a post fails to delete */
 "your.post.deletepost.error" = "حدث خطأ أثناء حذف المنشور";
-
-/* Button to open the system share sheet with an external post link */
-"your.post.externalshare.button" = "المشاركة خارج هالوآب";
-
-/* Title for button in action sheet prompting user to share post to external sites */
-"your.post.externalshare.copylink" = "انسخ الرابط لمشاركته";
 
 /* Success toast when external share link is copied */
 "your.post.externalshare.copylink.success" = "تم نسخ الرابط إلى الحافظة";
