--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -334,7 +334,7 @@
 /* Message text shown in a message that have photo media but no text */
 "chat.message.photo" = "Фото";
 
-/* Text shown when chat input box is empty */
+/* Text shown when content input text field is empty for chat screens. */
 "chat.message.placeholder" = "Написать сообщение";
 
 /* Text shown in place of a received message we are not able to process yet. */
@@ -1519,9 +1519,6 @@
 /* One of the items in context menu presented upon long press on linkified phone number in text. Parameter is the phone number. */
 "textlabel.context.menu.call.number" = "Позвонить %@";
 
-/* One of the items in context menu presented upon long press on web link. */
-"textlabel.context.menu.copy.link" = "Копировать ссылку";
-
 /* One of the items in context menu presented upon long press on linkified phone number in text. */
 "textlabel.context.menu.copy.phone.number" = "Копировать номер телефона";
 
@@ -1680,12 +1677,6 @@
 
 /* Displayed when a post fails to delete */
 "your.post.deletepost.error" = "Ошибка удаления сообщения";
-
-/* Button to open the system share sheet with an external post link */
-"your.post.externalshare.button" = "Поделиться";
-
-/* Title for button in action sheet prompting user to share post to external sites */
-"your.post.externalshare.copylink" = "Скопируйте ссылку, чтобы поделиться";
 
 /* Success toast when external share link is copied */
 "your.post.externalshare.copylink.success" = "Скопировано";
