--- a/Share Extension/pt-br.lproj/Localizable.strings
+++ b/Share Extension/pt-br.lproj/Localizable.strings
@@ -19,6 +19,9 @@
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuar";
 
+/* Title for generic copy URL button */
+"button.copy.link" = "Copiar link";
+
 /* Title for generic Create button */
 "button.create" = "Criar";
 
