--- a/Halloapp/Base.lproj/Localizable.stringsdict
+++ b/Halloapp/Base.lproj/Localizable.stringsdict
@@ -166,6 +166,22 @@
 			<string>%d members</string>
 		</dict>
 	</dict>
+	<key>group.grid.n.posts</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@count@</string>
+		<key>count</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d new post</string>
+			<key>other</key>
+			<string>%d new posts</string>
+		</dict>
+	</dict>
 	<key>notification.n.videos</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
